k8s/ingress.yml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-static
  namespace: app1
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: dev-static.awsweb.online
    http:
      paths:
      - path:
        backend:
          serviceName: static-service
          servicePort: 80
